--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   intl: ^0.18.1
+  share_plus: ^7.2.1
+  csv: ^5.0.3
 
 dev_dependencies:
   flutter_test:
